# RAG-Personal-Assistant

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
my_power/: 1_load_docs.py  2_split_docs.py  3_embed_store.py  4_rag_chain.py  app.py  embed_store.py  indexed_files.json  rag_chain.py  rag_module.py  upload_utils.py
my_power/chroma_db/191e8e28-77b4-4fe7-bb6d-f0db40fdfb2b/: index_metadata.pickle
my_power/my_notes/: JavaNotes_Ch01_Java基础语法.md  JavaNotes_Ch02_面向对象三大特性.md  JavaNotes_Ch03_异常处理.md  JavaNotes_Ch04_集合框架.md  JavaNotes_Ch05_泛型与类型系统.md  JavaNotes_Ch06_注解与反射.md  JavaNotes_Ch07_IO流.md  JavaNotes_Ch08_集合进阶.md  JavaNotes_Ch09_并发编程.md  JavaNotes_Ch10_JVM虚拟机.md  JavaNotes_Ch11_网络编程.md  JavaNotes_Ch12_Java新特性.md  java_notes.txt  js_notes.txt  python_nodes.txt
