[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "openai>=2.32.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
]
